tests/ui/fail-nightly/missing_select.stderr
error: Expected `SELECT` at the beginning of SQL filter, got `FROM` instead
 --> tests/ui/fail-nightly/missing_select.rs:5:9
  |
5 |         FROM users WHERE  // Missing SELECT clause
  |         ^^^^
  |
  = help: SQL filter must start with `SELECT` followed by columns, table and WHERE clause
  = note: It is case insensitive so `select` will also work.
